<resources>
    <string name="app_name">GPS Utilities</string>
    <string name="title_activity_maps">Map</string>
    <string name="http_err_no_connection">Lỗi kết nối mạng, vui lòng kiểm tra!</string>
    <string name="http_err_network_error">Lỗi kết nối máy chủ. Vui lòng thử lại!</string>
    <string name="http_err_connection_timeout">Không kết nối được đến máy chủ, vui lòng thử lại!</string>
    <string name="http_err_socket_timeout">Không nhận được phản hồi từ máy chủ.\nHãy cập nhật dữ liệu hoặc thử lại!</string>
    <string name="http_err_server_error">Lỗi máy chủ, mã lỗi: </string>
    <string name="http_err_resp_content_error">Lỗi máy chủ, mã lỗi: 888</string>
    <string name="dialog_error_system">Lỗi hệ thống.</string>
    <string name="title_activity_activity_demo_ui">ActivityDemoUI</string>
    <string name="title_activity_search_address_maps">SearchAddressMapsActivity</string>
    <string name="title_activity_search_street">SearchStreetActivity</string>
    <string name="title_activity_setting_maps">SettingMapsActivity</string>
    <string name="location">Direction</string>
    <string name="map_style">Near by Me</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="spinnerItems">
        <item>Xe oto</item>
        <item>Xe máy</item>
        <item>Xe đạp</item>
        <item>Đi bộ</item>
    </string-array>
    <string name="str_btn_find">Find</string>
    <string-array name="place_type">
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>courthouse</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>establishment</item>
        <item>finance</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>food</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>general_contractor</item>
        <item>grocery_or_supermarket</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>health</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>place_of_worship</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>

    </string-array>
    <string-array name="place_type_name">
        <item>Accounting</item>
        <item>Airport</item>
        <item>Amusement_park</item>
        <item>Aquarium</item>
        <item>Art gallery</item>
        <item>Atm</item>
        <item>Bakery</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty salon</item>
        <item>Bicycle store</item>
        <item>Book store</item>
        <item>Bowling alley</item>
        <item>Bus station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car dealer</item>
        <item>Car rental</item>
        <item>Car repair</item>
        <item>Car wash</item>
        <item>Casino</item>
        <item>Cemetery</item>
        <item>Church</item>
        <item>City hall</item>
        <item>Clothing store</item>
        <item>Convenience store</item>
        <item>Courthouse</item>
        <item>Dentist</item>
        <item>Department store</item>
        <item>Doctor</item>
        <item>Electrician</item>
        <item>Electronics store</item>
        <item>Embassy</item>
        <item>Establishment</item>
        <item>Finance</item>
        <item>Fire station</item>
        <item>Florist</item>
        <item>Food</item>
        <item>Funeral home</item>
        <item>Furniture store</item>
        <item>Gas station</item>
        <item>General contractor</item>
        <item>Grocery or supermarket</item>
        <item>Gym</item>
        <item>Hair care</item>
        <item>Hardware store</item>
        <item>Health</item>
        <item>Hindu temple</item>
        <item>Home goods store</item>
        <item>Hospital</item>
        <item>Insurance agency</item>
        <item>Jewelry store</item>
        <item>Laundry</item>
        <item>Lawyer</item>
        <item>Library</item>
        <item>Liquor store</item>
        <item>Local government office</item>
        <item>Locksmith</item>
        <item>Lodging</item>
        <item>Meal delivery</item>
        <item>Meal takeaway</item>
        <item>Mosque</item>
        <item>Movie rental</item>
        <item>Movie theater</item>
        <item>Moving company</item>
        <item>Museum</item>
        <item>Night club</item>
        <item>Painter</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Pet store</item>
        <item>Pharmacy</item>
        <item>Physiotherapist</item>
        <item>Place of worship</item>
        <item>Plumber</item>
        <item>Police</item>
        <item>Post office</item>
        <item>Real estate agency</item>
        <item>Restaurant</item>
        <item>Roofing contractor</item>
        <item>Rv park</item>
        <item>School</item>
        <item>Shoe store</item>
        <item>Shopping mall</item>
        <item>Spa</item>
        <item>Stadium</item>
        <item>Storage</item>
        <item>Store</item>
        <item>Subway station</item>
        <item>Synagogue</item>
        <item>Taxi stand</item>
        <item>Train station</item>
        <item>Transit station</item>
        <item>Travel agency</item>
        <item>University</item>
        <item>Veterinary care</item>
        <item>Zoo</item>
    </string-array>
    <string name="link_content">No account yet? Create one</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Mật khẩu</string>
    <string name="name_hint">Họ tên</string>
    <string name="already">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="message_hint">Say anything</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="linkDB">https://detaikhoaluan.firebaseio.com/</string>
    <string name="button_description">Emoticons Button</string>
    <string name="chat_hint">Enter text here</string>
    <string name="post">Post</string>
    <string name="back">Back</string>
    <string name="open_string">open</string>
    <string name="close_string">close</string>
    <string name="key_api">AIzaSyAhHiXNMuQXiofd35C3FDxXHP0Vcp_vsR0</string>
    <string name="avgSpeed">Trung Bình</string>
    <string name="distance">Quãng Đường</string>
    <string name="toTextview">Tới: </string>
    <string name="maxSpeed">Tối Đa</string>
    <string name="duration">Thời gian</string>
    <string name="fromTextview">Từ: </string>
    <string name="KPHbutton">KPH</string>
    <string name="MPHbutton">MPH</string>
    <string name="startRecordButton">Bắt Đầu</string>
    <string name="speedAnalysis">Biểu Đồ Tốc Độ</string>
    <string name="Speed">Tốc độ</string>
    <string name="Time">Thời gian</string>
    <string name="moreapp_play_text">market://search?q=pub:VirtualMaze</string>
    <string name="share_play_text">https://play.google.com/store/apps/details?id=com.virtualmaze.gpstriptracker</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="action_language">Language</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete_message">Bạn chắc chắn muốn xóa??</string>
    <string name="confirm_delete_title">Xóa</string>
    <string name="endingPlace">Nơi kết thúc</string>
    <string name="exit_application_message">Do you want to Exit?</string>
    <string name="exit_application_title">Thông báo</string>
    <string name="gps_not_found_message">Bạn có muốn bật GPS?</string>
    <string name="gps_not_found_title">Khôn tìm thấy GPS</string>
    <string name="loading">Loading</string>
    <string name="ok">Ok</string>
    <string name="quit">Quit</string>
    <string name="save_data_message">Bạn có chắc chắn không?. Dữ liệu sẽ không được lưu lại.</string>
    <string name="save_dialog_title">Lưu trữ hành trình</string>
    <string name="startingPlace">Nơi bắt đầu</string>
    <string name="text_AlertOption_Exit">Exit</string>
    <string name="text_AlertOption_MoreApps">More Apps</string>
    <string name="text_AlertOption_RateUs">Rate Us</string>
    <string name="text_AlertOption_ShareUs">Share Us</string>
    <string name="text_Language_ChooseLanguage">Choose Your Language</string>
    <string name="text_TransitionMsg">Language Loading...</string>
    <string name="tripName">Chuyển đi </string>
    <string name="triplistview_empty">Chưa có dữ liệu</string>
    <string name="yes">Yes</string>
    <string name="accept">Accept</string>
    <string name="action_pause">Dừng lại</string>
    <string name="action_record">Record</string>
    <string name="action_review">Review</string>
    <string name="action_settings">Settings</string>
    <string name="adMob_interstitialid">ca-app-pub-2714126105331667/7583748435</string>
    <string name="app_play_text">market://details?id=com.virtualmaze.gpstriptracker</string>
</resources>