<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/card_view_top_margin"
        android:layout_marginLeft="@dimen/card_view_left_margin"
        android:layout_marginRight="@dimen/card_view_right_margin"
        android:layout_marginTop="@dimen/card_view_bottom_margin">

        <LinearLayout
            android:id="@+id/reviewLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2.0">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/fromText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/fromTextview"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/fromTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/avgSpeedText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.75"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/avgSpeed"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/avgSpeedTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.25"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/distanceText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/distance"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/distanceTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#efefef" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/toText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/toTextview"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/toTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.5"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/maxSpeedText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.75"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/maxSpeed"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/maxSpeedTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.25"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#efefef" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:weightSum="6.0">

                    <TextView
                        android:id="@+id/durationText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2.3"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="@string/duration"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/durationTextview"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3.8"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
